# cpp_course_hw

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  Matrix.cpp  Matrix.hpp  README.md  Vector.hpp  coverage.info  input.txt  main.c  main.cpp  parallel.cpp  run_predicative.cpp  seq.out  sequential.cpp
.github/workflows/: ci.yml
example/: sequential.cpp
include/: CMakeLists.txt  Matrix.hpp  Set.hpp  Vector.hpp  buffer_reader.cpp  buffer_reader.hpp  buffer_writer.cpp  buffer_writer.hpp  file_manager.cpp  file_manager.hpp  predicate.cpp  process_manager.cpp  process_manager.hpp  process_manager_parallel.cpp  process_manager_sequential.cpp
include/sequential/: sequential.hpp
libs/: CMakeLists.txt
libs/error/: error.c  error.h
libs/io/: io.c  io.h
libs/manage_data/: manage_data.c  manage_data.h
libs/status/: status.c  status.h
libs/toys/: toys.c  toys.h
libs/utils/: utils.c  utils.h
linters/: run.sh
report/: index-sort-f.html  index-sort-l.html  index.html
report/toys_lib/: index-sort-f.html  index-sort-l.html  index.html  toys.c.func-sort-c.html  toys.c.func.html  toys.c.gcov.html
tests/: CMakeLists.txt  base_test.cpp  speed_test.cpp  test_structures.cpp  tests.cpp  unit_test.cpp
tests/base_test/: CMakeLists.txt  base_test.cpp
tests/speed_test/: CMakeLists.txt  speed_test.cpp
tests/time_test/: CMakeLists.txt  time_test.cpp
tests/unit_test/: CMakeLists.txt  unit_test.cpp
toys_lib/: CMakeLists.txt  toys.c  toys.h  toys.h.gch
