add_dependencies(tests test)
add_dependencies(tests test_speed)
add_dependencies(tests test_unit)
add_executable(test speed_test.cpp)
add_executable(test_speed base_test.cpp)
add_executable(test_unit unit_test.cpp)
target_link_libraries(test PUBLIC gtest gtest_main pthread)
target_link_libraries(test_unit PUBLIC gtest gtest_main pthread)